@@ -1,10 +1,9 @@
 --- grcov.orig/Cargo.toml
 +++ grcov/Cargo.toml
-@@ -53,3 +53,3 @@
- deflate-miniz = ["zip/deflate-miniz"]
+@@ -53,2 +53,1 @@
+-deflate-miniz = ["zip/deflate-miniz"]
 -deflate-zlib = ["zip/deflate-zlib"]
 +deflate-zlib = ["zip/deflate-flate2-zlib"]
- demangle-no-swift = [
 @@ -116,3 +116,3 @@
  [dependencies.quick-xml]
 -version = "0.37"
