@@ -5,6 +5,8 @@ rust-grcov (0.8.22-2) UNRELEASED-FIXME-AUTOGENERATED-DEBCARGO; urgency=medium
   * Bump zip to version 5 and update feature name for zlib backend.
   * Stop patching once_cell, smallvec, tempfile, uuid and rustc_version
     dependencies.
+  * Disable "deflate-miniz" feature since rust-zip 5 doesn't support
+    miniz.
 
  -- Peter Michael Green <plugwash@debian.org>  Tue, 16 Sep 2025 22:16:17 +0000
 
